--- a/style.css
+++ b/style.css
@@ -27,6 +27,56 @@ body{
     font-weight: 700;
     
 }
+.donate-today{
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+}
+.donation-amount{
+    display: flex;
+    justify-content: space-around;
+}
+input{
+    margin: 40px 0 25px 0;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    justify-content: center;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    transition: .3s linear;
+    width: 80%;
+}
+.input-btn{
+    background-image: linear-gradient(orange,tomato);
+    text-decoration: none;
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-weight: 700;
+    color: aliceblue;
+}
+.boxed-taka{
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 25PX;
+    padding-right: 25px;
+    width: 350%;
+    height: 100%;
+    text-align: center;
+    border-radius: 5px;
+
+}
+#orange{
+    border: 2px solid tomato;
+    color: tomato;
+}
+    
+    
+
+
+
 
     
     
