--- a/style.css
+++ b/style.css
@@ -131,8 +131,24 @@ input{
     padding-right: 2%;
     height: 100%;
     weight: 400%
+}
+.half-width{
+    display: flex;
+    padding-top: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    
+    
 
 }
+.need-donation-description{
+    font-size: 20px;
+    font-weight: 400;padding-right: 5%;
+    margin-right: 5%;
+}
+
+
+
     
     
 
