--- a/style.css
+++ b/style.css
@@ -145,7 +145,18 @@ input{
     font-size: 20px;
     font-weight: 400;padding-right: 5%;
     margin-right: 5%;
+
 }
+.about-us-container{
+    padding-top: 10%;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    background-color: antiquewhite;
+}
+
+
+    
 
 
 
