--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ footer{
     padding-left: 30%;
     margin-top: 5%;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: 20px;
     font-style: oblique;
     color: orangered;
@@ -234,13 +234,16 @@ footer{
     border-top: 5px solid orange;
 
 }
-footer .text{
-    padding-bottom:10px;
-}
+
 .input-sector{
     margin: 40px 0 25px 0;
 
 } 
+footer #white{
+    color: aliceblue;
+    padding-bottom:30px ;
+    padding-left: 10px;
+}
     
 
 
